Update navigation links in base.html to improve accessibility and remove unused links

--- a/budget_simulator/templates/base.html
+++ b/budget_simulator/templates/base.html
@@ -27,13 +27,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('results_page') }}">
+                        <a class="nav-link" href="#results-section">
                             <i class="fas fa-chart-line me-1"></i>Results
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('about') }}">
-                            <i class="fas fa-info-circle me-1"></i>About
                         </a>
                     </li>
                 </ul>
